--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -15,30 +15,32 @@
        <h2>Editing Book</h2>
         <div>
           <%= form_with model:@book, local:true do |f| %>
+
            <div>
              <div class="form-group">
-             <label for="inputTitle">Titlee</label>
-             <br><%= f.text_field :title, autofocus: true, id:"inputTitle"%>
-           </div>
+               <label for="inputTitle">Title</label>
+                <%= f.text_field :title, :class => "form-control book_title"%>
+             </div>
            </div>
 
            <div>
              <div class="form-group">
              <label for="inputbody">Opinion</label>
-             <br><%= f.text_area :body %>
+             <br><%= f.text_area :body, :class =>  "form-control book_body"%>
              </div>
            </div>
 
            <div>
-              <div class="form-group">
-              <input type="submit" name="commit" value="Update Book" class="btn btn-success" data-disable-with="Update Book">
-            </div>
+                <div class="form-group">
+                  <%= f.submit 'Update Book' , class: "btn btn-success"%>
+                </div>
             </div>
             <div>
             <%= link_to "Show",book_path(@book.id) %>
             |
             <%= link_to "Back",books_path %>
             </div>
+
            <% end %>
         </div>
 
@@ -46,12 +48,3 @@
     </div>
   </div>
 </body>
-<footer>
-  <div class="container mt-5">
-  	<div class="row">
-    	<div class="mx-auto">
-    		<p>CopyRight Infratop.inc</p>
-    	</div>
-    </div>
-  </div>
-</footer>
