--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,7 +19,7 @@
            <%= form_with model:@user, local:true do |f| %>
             <div>
               <label for="inputName">Name</label>
-              <br><%= f.text_field :name, autofocus: true, id:"inputName"%>
+              <%= f.text_field :name, autofocus: true, :class => "form-control book_name"%>
             </div>
 
             <div>
@@ -28,7 +28,7 @@
             </div>
             <div>
               <label for="inputIntroduction">Introduction</label>
-              <br><%= f.text_area :introduction, autofocus: true, id:"inputIntroduction"%>
+              <%= f.text_area :introduction, autofocus: true, :class => "form-control book_title"%>
             </div>
             <div>
               <input type="submit" name="commit" value="Update User" class="btn btn-secondary" data-disable-with="Update User">
@@ -39,14 +39,4 @@
     </div>
   </div>
 </body>
-
-<footer>
-  <div class="container mt-5">
-  	<div class="row">
-    	<div class="mx-auto">
-    		<p>CopyRight Infratop.inc</p>
-    	</div>
-    </div>
-  </div>
-</footer>
 
